--- a/text/praca/identifikacia_SNP.tex
+++ b/text/praca/identifikacia_SNP.tex
@@ -3,4 +3,4 @@
 \label{kap:identifikacia_SNP} % id kapitoly pre prikaz ref
 
 V tejto časti navrhneme techniku na odhaľovanie jednonukleotidových
-polymorfizmov (SNP\footnote{z anglického \emph{\textbf{s}ingle \textbf{n}ucleotide \textbf{p}olymorphism}}) v sekvenovaných dátach.
+polymorfizmov v sekvenovaných dátach.
